# playwright-python-lab

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main_pipeline.yml  playwright.yml
configs/: settings.py
core/api/: client.py
data/: models.py
legacy/: requirements.txt.backup
pages/: login_page.py
tests/: conftest.py  test_sauce_demo.py  test_setup.py
tests/api/: test_auth.py  test_crud.py  test_health_check.py
utils/: config_loader.py  logger.py
